--- a/Cadena_Impacto_Agricultura.html
+++ b/Cadena_Impacto_Agricultura.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
-    <title>Providencia -  Defunciones por Causa</title>
+    <title>Providencia -  Cadena Impacto: Agricultura</title>
     <link rel="stylesheet" href="/estilos1.css">
     <!-- Favicon and Touch Icons -->
     <link href="/assets/favicon/Icono_dataIntelligence_Rojo.png" rel="shortcut icon" type="image/png">
@@ -37,7 +37,6 @@
                       <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body w-100">
-                      <!--BUSCADOR-->
                       <form class="d-flex" role="search">
                         <div class="input-wrapper">
                           <input type="search" class="input" id="myInput" onkeyup="myFunction()" placeholder="Buscar...">
@@ -45,7 +44,6 @@
                             <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
                           </svg>
                         </div>
-
                       </form>
                       <ul class="nav nav-tabs pt-5" id="myTab" role="tablist" style="width: 100%; text-align: -webkit-center; display: inline-table; ">
                         <li class="nav-item" role="presentation" style="width: inherit;" >
@@ -81,8 +79,8 @@
                         <li class="nav-item" role="presentation">
                          <a href="/Delincuencia.html"> <button style="width: 100%!important;color:black" class="nav-link " id="contact-tab" data-bs-toggle="tab" data-bs-target="#powerbi3" type="button" role="tab" aria-controls="powerbi3" aria-selected="false">Delincuencia</button></a>
                         </li>
-                         <li class="nav-item" role="presentation">
-                          <a href="/Defunciones_Causa.html"><button style="width: 100%!important;color:black" class="nav-link active" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#test1" type="button" role="tab" aria-controls="test1" aria-selected="false">Defunciones por Causa</button></a>
+                        <li class="nav-item" role="presentation">
+                          <a href="/Defunciones_Causa.html"><button style="width: 100%!important;color:black" class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#test1" type="button" role="tab" aria-controls="test1" aria-selected="false">Defunciones por Causa</button></a>
                         </li>
                         <li class="nav-item" role="presentation">
                           <a href="/Empresas.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Empresas</button></a>
@@ -112,31 +110,7 @@
                           <a href="/Presencia_Especies.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Presencia Especies</button></a>
                         </li>
                         <li class="nav-item" role="presentation">
-                          <a href="/Indicadores_Climaticos.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Indicadores Climáticos</button></a>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                          <a href="/Salud_Educación_Municipal.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Salud y Educación Municipal</button></a>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                          <a href="/Estadísticas_Vitales.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Estadísticas Vitales</button></a>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                          <a href="/Pueblos_Indígenas.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Pueblos Indígenas</button></a>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                          <a href="/Ingresos.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Ingresos</button></a>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                          <a href="/Emisiones.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Emisiones</button></a>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                          <a href="/Fuentes_Fijas.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Emisiones</button></a>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                          <a href="/Presencia_Especies.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Presencia Especies</button></a>
-                        </li>  
-                        <li class="nav-item" role="presentation">
-                          <a href="/Cadena_Impacto_Agricultura.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Cadena Impacto: Agricultura</button></a>
+                          <a href="/Cadena_Impacto_Agricultura.html"><button style="width: 100%!important;color:black" class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Cadena Impacto: Agricultura</button></a>
                         </li>
                         <li class="nav-item" role="presentation">
                           <a href="/Mapas_Distancias_Servicios.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Mapas Distancias Servicios</button></a>
@@ -147,6 +121,7 @@
                         <li class="nav-item" role="presentation">
                           <a href="/Urgencias.html"><button style="width: 100%!important;color:black" class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Urgencias</button></a>
                         </li>
+
                       </ul>
 
                     </div>
@@ -194,13 +169,13 @@
             <li class="nav-item bac-color" role="presentation">
               <a href="/Delincuencia.html"><button class="nav-link text-color " id="contact-tab" data-bs-toggle="tab" data-bs-target="#powerbi3" type="button" role="tab" aria-controls="powerbi3" aria-selected="false">Delincuencia</button></a>
             </li>
-            <li class="nav-item bac-color" role="presentation">
-              <a href="/Defunciones_Causa.html"><button class="nav-link active text-color" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#test1" type="button" role="tab" aria-controls="test1" aria-selected="false">Defunciones por Causa</button></a>
+             <li class="nav-item bac-color" role="presentation">
+              <a href="/Defunciones_Causa.html"><button class="nav-link text-color" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#test1" type="button" role="tab" aria-controls="test1" aria-selected="false">Defunciones por Causa</button></a>
             </li>
             <li class="nav-item bac-color" role="presentation">
               <a href="/Empresas.html"><button class="nav-link text-color" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Empresas</button></a>
             </li>
-             <li class="nav-item bac-color" role="presentation">
+            <li class="nav-item bac-color" role="presentation">
               <a href="/Indicadores_Climaticos.html"><button class="nav-link text-color" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Indicadores Climáticos</button></a>
             </li>
             <li class="nav-item bac-color" role="presentation">
@@ -225,7 +200,7 @@
               <a href="/Presencia_Especies.html"><button class="nav-link text-color" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Presencia Especies</button></a>
             </li>
             <li class="nav-item bac-color" role="presentation">
-              <a href="/Cadena_Impacto_Agricultura.html"><button class="nav-link text-color" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Cadena Impacto: Agricultura</button></a>
+              <a href="/Cadena_Impacto_Agricultura.html"><button class="nav-link active text-color" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Cadena Impacto: Agricultura</button></a>
             </li>
             <li class="nav-item bac-color" role="presentation">
               <a href="/Mapas_Distancias_Servicios.html"><button class="nav-link text-color" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Mapas Distancias Servicios</button></a>
@@ -245,7 +220,7 @@
           <div class="container-fluid p-0">
             <div class="row">
                 <div class="col-12 iframes"> 
-                    <iframe loading="lazy" class="responsive-iframe" src="https://app.powerbi.com/view?r=eyJrIjoiNjA4MzM1YzctYmRjZi00NzExLThkMzAtZjg5YWFmZGVhMzA5IiwidCI6IjhmYmFhNWJmLTJlY2MtNGRjOC1iNTZiLThmOTJlMzA3ZjA3NiIsImMiOjR9" title="mapa" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe loading="lazy" class="responsive-iframe" src="https://app.powerbi.com/view?r=eyJrIjoiMmQ1Yzg5NmYtNzM1YS00NjZhLWJiNmMtYjg1MDhjODYwZTUxIiwidCI6IjhmYmFhNWJmLTJlY2MtNGRjOC1iNTZiLThmOTJlMzA3ZjA3NiIsImMiOjR9" title="mapa" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
           </div>
