--- a/Gestión_Territorial.html
+++ b/Gestión_Territorial.html
@@ -31,7 +31,7 @@
                   <button class="navbar-toggler" style="padding:0;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <img class=" img-fluid" src="/assets/cochamo/interior_iconomenu.png" alt="">
                   </button>
-                  <div style="background-color:#1ad1c4!important;" class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                  <div style="background-color:#1ad1c4!important;" class="offcanvas offcanvas-start text-bg-dark offcanvas-menu" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                     <div class="offcanvas-header">
                       <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel"></h5>
                       <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
