--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         
         <div class="col-12 col-md-4 p-0"style="background:#1ad1c4;">
           <div class="container">
-            <div class="row" style=" height: 50px; background-color: black;"  >
-
+            <div class="row">
+              <div class="col-12 p-0">
+                <img class=" img-fluid w-100" src="/assets/cochamo/portadainicio_degradado.jpg" alt="">
+              </div>
             </div>
           </div>
           <div class="container">
