--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         
-        <div class="col-12 col-md-4 p-0"style="background:#1ad1c4;">
+        <div class="col-12 col-md-4 p-0">
           <div class="container">
             <div class="row">
               <div class="col-12 p-0">
