--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Providencia</title>
+    <title>Quillota</title>
     <!-- Favicon and Touch Icons -->
     <link href="/assets/favicon/Icono_dataIntelligence_Rojo.png" rel="shortcut icon" type="image/png">
     <link href="/assets/favicon/Icono_dataIntelligence_Rojo.png" rel="apple-touch-icon">
