--- a/Estadísticas_Vitales.html
+++ b/Estadísticas_Vitales.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
-    <title>Providencia -  Estadísticas Vitales</title>
+    <title>Quillota -  Estadísticas Vitales</title>
     <link rel="stylesheet" href="/estilos1.css">
     <!-- Favicon and Touch Icons -->
     <link href="/assets/favicon/Icono_dataIntelligence_Rojo.png" rel="shortcut icon" type="image/png">
