--- a/Recursos_Infraestructura.html
+++ b/Recursos_Infraestructura.html
@@ -170,7 +170,7 @@
             <li class="nav-item bac-color" role="presentation">
               <a href="/Delincuencia.html"><button class="nav-link text-color" id="contact-tab" data-bs-toggle="tab" data-bs-target="#powerbi3" type="button" role="tab" aria-controls="powerbi3" aria-selected="false">Delincuencia</button></a>
             </li>
-            <li class="nav-item" role="presentation">
+            <li class="nav-item bac-color" role="presentation">
               <a href="/Defunciones_Causa.html"><button class="nav-link text-color" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#test1" type="button" role="tab" aria-controls="test1" aria-selected="false">Defunciones por Causa</button></a>
             </li>
             <li class="nav-item bac-color" role="presentation">
@@ -185,7 +185,7 @@
             <li class="nav-item bac-color" role="presentation">
               <a href="/Estadísticas_Vitales.html"><button class="nav-link text-color" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Estadísticas Vitales</button></a>
             </li>
-            <li class="nav-item" role="presentation">
+            <li class="nav-item bac-color" role="presentation">
               <a href="/Pueblos_Indígenas.html"><button class="nav-link text-color" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Pueblos Indígenas</button></a>
             </li>
             <li class="nav-item bac-color" role="presentation">
